<resources>
    <string name="app_name">Tindine</string>
    <string name="facebook_app_id">132360634149597</string>
    <string name="fb_login_protocol_scheme">fb132360634149597</string>
    <string name="google_places_api_key">AIzaSyBPHzr0aUZED9KwP6SYzK6VbAvgi1uubQU</string>
    <string name="google_api">AIzaSyBPHzr0aUZED9KwP6SYzK6VbAvgi1uubQU</string>

    <string name="menu_requester">Requests Sent</string>
    <string name="menu_acceptor">Requests Claimed</string>
    <string name="menu_home">Nearby Requests</string>
    <string name="menu_add">New Request</string>

    <string name="request_info">Request Information</string>
    <string name="restaurant_placeholder_name">Restaurant Name</string>
    <string name="restaurant_placeholder_address">123 Westwood Blvd\nLos Angeles, CA 90024\n(310)555&#8211;5678</string>
    <string name="restaurant_placeholder_cost">$5</string>
    <string name="restaurant_placeholder_status">Pending</string>
    <string name="placeholder_name">John Doe</string>
    <string name="placeholder_number_in_party">5 people</string>
    <string name="x_people">%1$d people</string>
    <string name="placeholder_lunch_topic">Placeholder Lunch Topic</string>
    <string name="cancel">Cancel</string>
    <string name="claim">Claim</string>
    <string name="complete">Complete</string>

    <string name="lunch_topic_1">Lunch Topic 1:</string>
    <string name="lunch_topic_2">Lunch Topic 2:</string>

    <string name="remove_request">Remove Request</string>
    <string name="unclaim_request">Un-claim Request</string>
    <string name="unmatch_request">Un-match Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launch">LaunchActivity</string>
</resources>
