<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <ImageView
            android:id="@+id/item_request_restaurant_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="5dp"
            android:src="@drawable/com_facebook_button_icon_blue"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/item_request_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/restaurant_placeholder_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/item_request_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_placeholder_address"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/item_request_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/restaurant_placeholder_status"
        android:textAlignment="center"
        android:textColor="@color/orange_700"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</LinearLayout>